# visualize_babel

./: .gitignore  README.md  pyproject.toml
src/: main.py  settings.py
src/model/: chat.py
src/utils/: utils.py
tests/: test_chat.py
tests/testcase_chat/: test_chat.yml  test_chat_template.yml
