[tool.poetry]
name = "oa-detection"
version = "0.1.0"
description = "OA検出の研究のためのプロジェクト"
authors = ["shun31y <shun.kato@elyza.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
jupyter = "^1.0.0"
wandb = "^0.17.1"
tqdm = "^4.66.4"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
pillow = "^10.3.0"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"
fire = "^0.6.0"
black = "^24.4.2"
isort = "^5.13.2"
python-dotenv = "^1.0.1"
matplotlib = "^3.9.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"